--- a/CSS/13_background_image_clip_borderbox.css
+++ b/CSS/13_background_image_clip_borderbox.css
@@ -2,5 +2,5 @@
 	border: 5px dotted black;
 	padding: 40px;
     	background-color: khaki;
-	background-clip: padding-box;
+	background-clip: border-box;
         }
